# python-typing-koans

./: .gitignore  .gitpod.yml  README.md  flake.nix  pyproject.toml
koans/py/: 100-easy-variable-wrong-type.py  101-easy-tuple-value.py  102-easy-list-homogenous.py  103-easy-mixed-values.py  104-easy-union-example.py  105-easy-dictionary-example.py  106-easy-function-example.py  107-easy-typed-dict.py  108-easy-type-alias.py  109-easy-user-defined-class.py  110-easy-class-variable.py  111-medium-callable-annotate.py  112-medium-type-as-example.py  113-easy-builder-pattern.py  114-medium-factory-pattern.py
